# kimura

./: .gitignore  .quickly  AUTHORS  LICENSE  Makefile.am  README.md  configure.ac
config/: pandora-plugin.ini
m4/: pandora_canonical.m4  pandora_drizzle_build.m4  pandora_vc_build.m4
src/kimura/: Makefile.am  kimura.cpp  kimura.h
src/kimura/jsoncpp/: config.h  features.h  forwards.h  json_batchallocator.h  json_reader.cpp  json_value.cpp  json_writer.cpp  reader.h  value.h  writer.h
